# WasmEdge

test/component/: CMakeLists.txt  componentvalidatortest.cpp
test/component/componentTestData/: test.wasm
